# scratchnet

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
scratchnet/: __init__.py  character_list.txt  logger.py  packet.py  server.py
